task5VPC.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description" : "daniil-cloudformation-task5",

  "Resources" : {
    "MyVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock" : "10.0.0.0/16",
        "EnableDnsHostnames" : true,
        "EnableDnsSupport" : true,
        "Tags": [
          {"Key": "Name", "Value": "daniil-vpc-cloudformation"}
        ]
      }
    },
	
	"InternetGateway": {
		"Type": "AWS::EC2::InternetGateway",
		"Properties": {
			"Tags": [{"Key": "Name", "Value": "daniil-internet-gateway-cloudformation"}]
		}
	},

	"VPCInternetGatewayAttachment": {
		"Type": "AWS::EC2::VPCGatewayAttachment",
		"Properties": {
			"InternetGatewayId": {"Ref": "InternetGateway"},
			"VpcId": {"Ref": "MyVPC"}
		}
	},
	
	"ElasticIp1a": {
		"Type": "AWS::EC2::EIP",
		"Properties": {
			"Domain": "vpc",
			"Tags": [{"Key": "Name", "Value": "daniil-elasticIp-1a-cloudformation"}]
		}
	},
	"ElasticIp1b": {
		"Type": "AWS::EC2::EIP",
		"Properties": {
			"Domain": "vpc",
			"Tags": [{"Key": "Name", "Value": "daniil-elasticIp-1a-cloudformation"}]
		}
	},
	
	"RouteTablePubS1a": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"Tags": [{"Key": "Name", "Value":"daniil-rt-pubS1a-cloudformation"}],
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"RouteTablePubS1b": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"Tags": [{"Key": "Name", "Value":"daniil-rt-pubS1b-cloudformation"}],
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"RouteTablePriS1a": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"Tags": [{"Key": "Name", "Value":"daniil-rt-priS1a-cloudformation"}],
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"RouteTablePriS1b": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"Tags": [{"Key": "Name", "Value":"daniil-rt-priS1b-cloudformation"}],
			"VpcId": { "Ref": "MyVPC" }
		}
	},

	"RouteTableDBS1a": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"Tags": [{"Key": "Name", "Value":"daniil-rt-DBS1a-cloudformation"}],
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"RouteTableDBS1b": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"Tags": [{"Key": "Name", "Value":"daniil-rt-DBS1b-cloudformation"}],
			"VpcId": { "Ref": "MyVPC" }
		}
	},

	"AssociationRouteTablePubSB1a": {
		"Type" : "AWS::EC2::SubnetRouteTableAssociation",
		"Properties" : {
			"RouteTableId" : {"Ref": "RouteTablePubS1a"},
			"SubnetId" : {"Ref": "PublicSubnetEuCentral1a"}
		}
	},
	"AssociationRouteTablePubSB1b": {
		"Type" : "AWS::EC2::SubnetRouteTableAssociation",
		"Properties" : {
			"RouteTableId" : {"Ref": "RouteTablePubS1b"},
			"SubnetId" : {"Ref": "PublicSubnetEuCentral1b"}
		}
	},
	"AssociationRouteTablePriSB1a": {
		"Type" : "AWS::EC2::SubnetRouteTableAssociation",
		"Properties" : {
			"RouteTableId" : {"Ref": "RouteTablePriS1a"},
			"SubnetId" : {"Ref": "PrivateSubnetEuCentral1a"}
		}
	},
	"AssociationRouteTablePriSB1b": {
		"Type" : "AWS::EC2::SubnetRouteTableAssociation",
		"Properties" : {
			"RouteTableId" : {"Ref": "RouteTablePriS1b"},
			"SubnetId" : {"Ref": "PrivateSubnetEuCentral1b"}
		}
	},
	"AssociationRouteTableDBSB1a": {
		"Type" : "AWS::EC2::SubnetRouteTableAssociation",
		"Properties" : {
			"RouteTableId" : {"Ref": "RouteTableDBS1a"},
			"SubnetId" : {"Ref": "DBSubnetEuCentral1a"}
		}
	},
	"AssociationRouteTableDBSB1b": {
		"Type" : "AWS::EC2::SubnetRouteTableAssociation",
		"Properties" : {
			"RouteTableId" : {"Ref": "RouteTableDBS1b"},
			"SubnetId" : {"Ref": "DBSubnetEuCentral1b"}
		}
	},

	"myRoutePubS1a": {
		"Type": "AWS::EC2::Route",
		"DependsOn" : "InternetGateway",
		"Properties": {
			"DestinationCidrBlock": "0.0.0.0/0",
			"RouteTableId": {"Ref": "RouteTablePubS1a"},
			"GatewayId": {"Ref":  "InternetGateway"}
		  }
	},
	"myRoutePubS1b": {
		"Type": "AWS::EC2::Route",
		"DependsOn" : "InternetGateway",
		"Properties": {
			"DestinationCidrBlock": "0.0.0.0/0",
			"RouteTableId": {"Ref": "RouteTablePubS1b"},
			"GatewayId": {"Ref":  "InternetGateway"}
		  }
	},
	"myRoutePriS1a": {
		"Type": "AWS::EC2::Route",
		"DependsOn" : "NATGateway1a",
		"Properties": {
			"DestinationCidrBlock": "0.0.0.0/0",
			"RouteTableId": {"Ref": "RouteTablePriS1a"},
			"NatGatewayId": {"Ref": "NATGateway1a"}
		}
	},
	"myRoutePriS1b": {
		"Type": "AWS::EC2::Route",
		"DependsOn" : "NATGateway1b",
		"Properties": {
			"DestinationCidrBlock": "0.0.0.0/0",
			"RouteTableId": {"Ref": "RouteTablePriS1b"},
			"NatGatewayId": {"Ref": "NATGateway1b"}
		}
	},

	"NATGateway1a": {
		"Type": "AWS::EC2::NatGateway",
		"DependsOn": "ElasticIp1a",
		"Properties": {
			"AllocationId": {"Fn::GetAtt": ["ElasticIp1a", "AllocationId"]},
			"SubnetId": {"Ref": "PublicSubnetEuCentral1a"},
			"Tags": [{"Key": "Name", "Value": "daniil-nat-1a-cloudformation"}]
		}
	},
	"NATGateway1b": {
		"Type": "AWS::EC2::NatGateway",
		"DependsOn": "ElasticIp1b",
		"Properties": {
			"AllocationId": {"Fn::GetAtt": ["ElasticIp1b", "AllocationId"]},
			"SubnetId": {"Ref": "PublicSubnetEuCentral1b"},
			"Tags": [{"Key": "Name", "Value": "daniil-nat-1b-cloudformation"}]
		}
	},

	"PublicSubnetEuCentral1a": {
		"Type" : "AWS::EC2::Subnet",
		"Properties": {
			"AvailabilityZone" : "eu-central-1a",
			"Tags": [{"Key": "Name", "Value": "daniil-public-subnet-eu-central-1a-cloudformation"}],
			"CidrBlock": "10.0.11.0/24",
			"VpcId": { "Ref": "MyVPC" }
		}
	},	
	"PublicSubnetEuCentral1b": {
		"Type" : "AWS::EC2::Subnet",
		"Properties": {
			"AvailabilityZone" : "eu-central-1b",
			"Tags": [{"Key": "Name", "Value": "daniil-public-subnet-eu-central-1b-cloudformation"}],
			"CidrBlock": "10.0.21.0/24",
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"PrivateSubnetEuCentral1a": {
		"Type" : "AWS::EC2::Subnet",
		"Properties": {
			"AvailabilityZone" : "eu-central-1a",
			"Tags": [{"Key": "Name", "Value": "daniil-private-subnet-eu-central-1a-cloudformation"}],
			"CidrBlock": "10.0.12.0/24",
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"PrivateSubnetEuCentral1b": {
		"Type" : "AWS::EC2::Subnet",
		"Properties": {
			"AvailabilityZone" : "eu-central-1b",
			"Tags": [{"Key": "Name", "Value": "daniil-private-subnet-eu-central-1b-cloudformation"}],
			"CidrBlock": "10.0.22.0/24",
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"DBSubnetEuCentral1a": {
		"Type" : "AWS::EC2::Subnet",
		"Properties": {
			"AvailabilityZone" : "eu-central-1a",
			"Tags": [{"Key": "Name", "Value": "daniil-db-subnet-eu-central-1a-cloudformation"}],
			"CidrBlock": "10.0.13.0/24",
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"DBSubnetEuCentral1b": {
		"Type" : "AWS::EC2::Subnet",
		"Properties": {
			"AvailabilityZone" : "eu-central-1b",
			"Tags": [{"Key": "Name", "Value": "daniil-db-subnet-eu-central-1b-cloudformation"}],
			"CidrBlock": "10.0.23.0/24",
			"VpcId": { "Ref": "MyVPC" }
		}
	},
	"SecurityGroupForBastion": {
		"Type": "AWS::EC2::SecurityGroup",
		"Properties": {
			"GroupDescription": "security group for bastion",
			"VpcId": {"Ref": "MyVPC"},
			"Tags": [{"Key": "Name", "Value": "daniil-bastion-security-group-cloudformation"}],
			"SecurityGroupIngress" : [{
				"IpProtocol" : "tcp",
				"FromPort" : 22,
				"ToPort" : 22,
				"CidrIp" : "0.0.0.0/0"
			}]
		}
	},
	"BastionLaunchConfiguration": {
		"Type": "AWS::AutoScaling::LaunchConfiguration",
		"Properties": {
			"InstanceType": "t2.micro",
			"ImageId": "ami-040cf9dcede9f064a",
			"SecurityGroups": [{
				"Ref": "SecurityGroupForBastion"
			}]
		}
	},
	"BastionAutoScallingGroup": {
		"Type": "AWS::AutoScaling::AutoScalingGroup",
		"DependsOn": "BastionLaunchConfiguration",
		"Properties": {
			"AvailabilityZones":{"Fn::Select" : ["0", {"Fn::GetAZs" : ""}]},
			"LaunchConfigurationName": {"Ref": "BastionLaunchConfiguration"},
			"VPCZoneIdentifier": [{"Ref": "PublicSubnetEuCentral1a"}],
			"MinSize": 1,
			"MaxSize": 1,
			"Tags": [{"Key": "Name", "Value": "daniil-bastion-autoscalling-group-cloudformation","PropagateAtLaunch": true}]
		}
	}
  }
}
